[project]
name = "rag-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "bs4>=0.0.2",
    "chromadb>=1.5.9",
    "langchain[google-genai]>=1.3.2",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.4",
    "langchain-openai>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "langchainhub>=0.1.21",
    "requests>=2.34.2",
    "tiktoken>=0.13.0",
    "langchain-core>=1.4.0",
]
