[project]
name = "rag-from-scratch"
version = "0.1.0"
description = "Learning RAG from scratch with LangChain and Google Gemini"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "bs4>=0.0.2",
    "chromadb>=1.5.9",
    "langchain[google-genai]>=1.3.2",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.4",
    "langchain-openai>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "langchainhub>=0.1.21",
    "requests>=2.34.2",
    "tiktoken>=0.13.0",
    "langchain-core>=1.4.0",
    "langchain-huggingface>=1.2.2",
    "sentence-transformers>=5.5.1",
    "langsmith>=0.8.8",
    "umap-learn>=0.5.12",
    "plotly>=6.8.0",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "pydantic>=2.13.4",
    "youtube-transcript-api>=1.2.4",
    "pytube>=15.0.0",
    "pytubefix>=10.9.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "python-dotenv>=1.2.2",
]
